# swagger.json
@@ -15,7 +15,7 @@
     "version": "1.0.0"
   },
   "host": "localhost:8080",
-  "basePath": "/mp",
+  "basePath": "/",
   "paths": {
     "/mp": {
       "get": {
@@ -96,6 +96,30 @@
             "required": true
           }
         ]
+      }
+    },
+    "/refresh": {
+      "post": {
+        "description": "Get new token in exchange for an old one",
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "auth"
+        ],
+        "operationId": "refresh"
+      }
+    },
+    "/signin": {
+      "post": {
+        "description": "Login with username and password",
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "auth"
+        ],
+        "operationId": "signIn"
       }
     }
   }
